// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bildwurf Ad Block should render Default 1`] = `
<DocumentFragment>
  <script
    data-testid="fake-script"
    src="https://media.online.bildwurf.ch/js/code.min.js"
  />
  .emotion-0 #bildwurf-ad-in-content {
  margin-top: 0;
  margin-bottom: 0;
}

<div
    class="emotion-0 emotion-1"
  >
    
            
    <div
      id="bildwurf-injection-wrapper"
    >
      
              
      <ins
        classname="aso-zone"
        data-zone="77348"
      />
      
            
    </div>
    
          
  </div>
</DocumentFragment>
`;

exports[`Bildwurf Ad Block should render WithClassName 1`] = `
<DocumentFragment>
  <script
    data-testid="fake-script"
    src="https://media.online.bildwurf.ch/js/code.min.js"
  />
  .emotion-0 #bildwurf-ad-in-content {
  margin-top: 0;
  margin-bottom: 0;
}

<div
    class="extra-classname emotion-0 emotion-1"
  >
    
            
    <div
      id="bildwurf-injection-wrapper"
    >
      
              
      <ins
        classname="aso-zone"
        data-zone="77348"
      />
      
            
    </div>
    
          
  </div>
</DocumentFragment>
`;
